Use relative paths for report cards.

--- a/report_cards/templating.html
+++ b/report_cards/templating.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Templating
-permalink: /report-cards/templating
+permalink: report-cards/templating
 skills:
 - Uses HTML tags appropriately
 - Avoids inline styles
