Add more react native skills.

--- a/report_cards/react_native.html
+++ b/report_cards/react_native.html
@@ -15,6 +15,8 @@ skills:
 - Separates logic from component state using services
 - Presents loading state and errors to user
 - Handles promise rejections appropriately (not `console.log`)
+- Styles components effectively using Flexbox
+- Uses animations where appropriate to improve user experience
 ---
 
 {% include_relative tasks.html %}
