Add another react native skill.

--- a/report_cards/react_native.html
+++ b/report_cards/react_native.html
@@ -17,6 +17,7 @@ skills:
 - Handles promise rejections appropriately (not `console.log`)
 - Styles components effectively using Flexbox
 - Uses animations where appropriate to improve user experience
+- Sends a semantic version number alongside all API requests
 ---
 
 {% include_relative tasks.html %}
